--- a/references.bib
+++ b/references.bib
@@ -1,5 +1,4 @@
-% This file was created with JabRef 2.10.
-% Encoding: MacRoman
+% Encoding: x-MacRoman
 
 
 @Article{Abdi2013,
@@ -102,13 +101,11 @@
 }
 
 @TechReport{Alavi1991,
-  Title                    = {Tectonic map of the {M}iddle {E}ast, scale 1:5,000,000},
-  Author                   = {Alavi, M.},
-  Institution              = {Geological Survey of Iran},
-  Year                     = {1991},
-
-  __markedentry            = {[naeem:]},
-  Journal                  = {Geological Survey of Iran}
+  author      = {Alavi, M.},
+  title       = {Tectonic map of the {M}iddle {E}ast, scale 1:5,000,000},
+  institution = {Geological Survey of Iran},
+  year        = {1991},
+  journal     = {Geological Survey of Iran},
 }
 
 @Book{Ambraseys_2009_Book,
@@ -139,12 +136,10 @@
 }
 
 @Book{Baker2008,
-  Title                    = {An introduction to probabilistic seismic hazard analysis ({PSHA})},
-  Author                   = {Baker, Jack W},
-  Year                     = {2008},
-  Note                     = {Version 1.3, 72pp},
-
-  __markedentry            = {[naeem:6]}
+  author = {Baker, Jack W},
+  title  = {An introduction to probabilistic seismic hazard analysis ({PSHA})},
+  year   = {2008},
+  note   = {Version 1.3, 72pp},
 }
 
 @Article{Barani2007,
@@ -1126,3 +1121,34 @@
   Publisher                = {Springer}
 }
 
+@Article{Kagan1994,
+  author        = {Y. Y. Kagan and D. D. Jackson},
+  title         = {Long-term probabilistic forecasting of earthquakes},
+  year          = {1994},
+  volume        = {99},
+  number        = {B7},
+  month         = {jul},
+  pages         = {13685--13700},
+  doi           = {10.1029/94jb00500},
+  url           = {http://dx.doi.org/10.1029/94JB00500},
+  __markedentry = {[naeem:]},
+  journal       = {J. Geophys. Res.},
+  publisher     = {Wiley-Blackwell},
+}
+
+@Article{Moschetti2015,
+  author        = {Morgan P. Moschetti},
+  title         = {A Long-Term Earthquake Rate Model for the Central and Eastern {United States} from Smoothed Seismicity},
+  year          = {2015},
+  volume        = {105},
+  number        = {6},
+  month         = {nov},
+  pages         = {2928--2941},
+  doi           = {10.1785/0120140370},
+  url           = {http://dx.doi.org/10.1785/0120140370},
+  __markedentry = {[naeem:6]},
+  journal       = {Bulletin of the Seismological Society of America},
+  publisher     = {Seismological Society of America ({SSA})},
+}
+
+@Comment{jabref-meta: databaseType:biblatex;}
