--- a/response.tex
+++ b/response.tex
@@ -66,7 +66,7 @@ Pp7-8: Discussion about identifying the completeness level of the earthquake cat
 }
 
 \response{%
-Response will be here.
+You are right. We used both methods in the study. First we compute the $b-value$ and $M_{max}$ for each region, or the uniform model using the HA3 package written by Dr. Kijko. $M_c$ is used as an input in the software to get accurate results. We computed the smoothed seismic hazard using the Seiskit package, written by Dr. Frankel. In estimating the seismic hazard, specifically $a-value$, we need to define a start year of completeness for each magnitude range. We modified the text to clarify the statement. 
 }
 
 \comment{6}{%
@@ -74,7 +74,7 @@ Pp7-8: The authors should note that some authors use an alternative smoothing ke
 }
 
 \response{%
-Response will be here.
+Added. Thanks.
 }
 
 
@@ -83,7 +83,7 @@ Pp7-8: In addition to the Mirzaei et al. (1997) reference, some authors employ l
 }
 
 \response{%
-Response will be here.
+Added to the text. Thanks.
 }
 
 \comment{7}{%
@@ -91,7 +91,7 @@ Pp 9: Kagan and Jackson, 1994 should also be included in the reference list.
 }
 
 \response{%
-Response will be here.
+Added. Thanks.
 }
 
 \comment{8}{%
@@ -170,7 +170,7 @@ In this paper, the researchers present a new seismic hazard analysis of northern
 The authors present uncertainty in their hazard estimate but do not include a more exhaustive logic tree analysis. Effectively, they have two branches: a regional model and uniform model. It appears that they apply the aleatory uncertainty in the ground motion prediction relation to a form of epistemic uncertainty, effectively double counting this uncertainty in the hazard analysis. I would prefer to see a more standard logic tree analysis where multiple GMPEs (or a backbone plus and minus one standard deviation) and uncertainty in a-value, b-value, and Mmax, for example, are considered. Barring this analysis, I would remove figure 10 and references to hazard uncertainty.
 }
 
-\response{Response will be here.}
+\response{Thanks for the comment.  Based on explanation of GMPEs section (please see comment no.?) we decided to define a suite of GMPE and also provide the uncertainty. We consider the epistemic uncertainty, based on defining two different model (which considers the uncertainty in $b-value$ and $M_max$). In order to make it clear we added two GMPE suites (plus and minus one standard deviation) also we defined the uncertainty in $M_{max}$. This approach will cover the most of uncertainty in the study.}. 
 
 \comment{2}{%
 While I think that the regional and uniform models are generally correct within 1.5 degrees of the border, I think that outside of this region, they may be moderately underestimating hazard by not considering sources with 200 km of their region of interest. Their buffer zone for sources is presently 50 km.
@@ -189,117 +189,117 @@ In the second paragraph of the introduction, I would include a reference to a fi
 \response{Response will be here.}
 
 \comment{5}{%
-line 39:   eight        -> eighth
+line 39:   eight  $\to$ eighth
 }
 \response{Fixed.}
 
 \comment{6}{%
-line 55   focuses in -> focuses on
+line 55   focuses in $\to$ focuses on
 }
 \response{Done. Thanks.}
 
 \comment{7}{%
-line 56 -> Please be more specific about how your analysis differs from previous analyses.
+line 56 $\to$ Please be more specific about how your analysis differs from previous analyses.
 }
 \response{Response will be here.}
 
 \comment{8}{%
-line 60 -> Can you be more specific? What are the other indicators?
+line 60 $\to$ Can you be more specific? What are the other indicators?
 }
 \response{Response will be here.}
 
 \comment{9}{%
-line 71 -> Include reference? Include reference.
+line 71 $\to$ Include reference? Include reference.
 }
-\response{Response will be here.}
+\response{Done. Thanks.}
 
 \comment{10}{%
-line 78 -> reduce -> acknowledge
+line 78 $\to$ reduce $\to$ acknowledge
 }
 \response{Fixed.}
 
 \comment{11}{%
-line 99 -> Is 0.5 degrees enough? To what distance do you do your ground motion calculations? In the western United States, they are done to 200 km. In the central and eastern, they are done to 1000 km. Depending on this value, you should include sources up to this distance from your region of interest.
+line 99 $\to$ Is 0.5 degrees enough? To what distance do you do your ground motion calculations? In the western United States, they are done to 200 km. In the central and eastern, they are done to 1000 km. Depending on this value, you should include sources up to this distance from your region of interest.
 }
 \response{We reanalyze the hazard with 2 degrees buffer zone. (Not modified in the text.)}
 
 \comment{12}{%
-line106 -> northeast -> northwest
+line106 $\to$ northeast $\to$ northwest
 }
 \response{Done. Thanks}
 
 \comment{13}{%
-line 114 -> There is no previous mention of this earthquake. I am not sure to which earthquake you are referring. Should either the 1721 or 1780 earthquakes be the Shebli earthquake?
+line 114 $\to$ There is no previous mention of this earthquake. I am not sure to which earthquake you are referring. Should either the 1721 or 1780 earthquakes be the Shebli earthquake?
 }
-\response{Response will be here.}
+\response{Thanks for the comment. It is 26 April 1721,$M_s ~ 7.3$ earthquake}
 
 \comment{14}{%
-line 180 -> The smaller events should also help to inform the G-R relationship.
+line 180 $\to$ The smaller events should also help to inform the G-R relationship.
 }
 \response{Thanks for the comment. Added to the text.}
 
 \comment{15}{%
-line 182 -> How come this study doesn't appear in Table 3. Do they not calculate PGA for 2 and 10\% exceedance in 50 years?
+line 182 $\to$ How come this study doesn't appear in Table 3. Do they not calculate PGA for 2 and 10\% exceedance in 50 years?
 }
 \response{Response will be here.}
 
 \comment{16}{%
-line 192 -> What is the total number of events before and after declustering?
+line 192 $\to$ What is the total number of events before and after declustering?
 }
-\response{Response will be here.}
+\response{Number of events before decluttering: 10441, total foreshock: 971, total aftershock: 4206, declustered data 5254. It should be noted that, these numbers are representing the events in the study region (including the bufferzone). It partly includes events from Central and Zagros region. For completeness study we studied the whole data for each region.}
 
 \comment{17}{%
-line 224 -> Why did you use this method? What are the benefits of one or the other?
+line 224 $\to$ Why did you use this method? What are the benefits of one or the other?
 }
 \response{Response will be here.}
 
 \comment{18}{%
-line 232 -> It is unclear how you chose Mc. In some cases, it looks like you chose the peak goodness-of-fit value, but in others you did not. Please be more specific about how Mc was chosen.
+line 232 $\to$ It is unclear how you chose Mc. In some cases, it looks like you chose the peak goodness-of-fit value, but in others you did not. Please be more specific about how Mc was chosen.
 }
 \response{Response will be here.}
 
 \comment{19}{%
-line 267 -> add 'and'
+line 267 $\to$ add 'and'
 }
 \response{Added. Thanks.}
 
 \comment{20}{%
-line 289 -> You might also cite the 2014 USGS National Model (Petersen et al., 2014) and the Afghanistan seismic hazard maps (Boyd et al, 2007), which include spatial variability in the smoothing parameter.
+line 289 $\to$ You might also cite the 2014 USGS National Model (Petersen et al., 2014) and the Afghanistan seismic hazard maps (Boyd et al, 2007), which include spatial variability in the smoothing parameter.
 }
-\response{Response will be here.}
+\response{Added. Thanks.}
 
 \comment{21}{%
-line 297 -> provided below -> provided in the next section
+line 297 $\to$ provided below $\to$ provided in the next section
 }
 \response{Fixed.}
 
 \comment{22}{%
-line 300 :  allows to draw information -> allows one to draw information 
+line 300 :  allows to draw information $\to$ allows one to draw information 
 }
 \response{Done.}
 
 \comment{23}{%
-line 323 -> Be more specific about how HA3 computes b and Mmax. What is its method?
+line 323 $\to$ Be more specific about how HA3 computes b and Mmax. What is its method?
 }
-\response{Response will be here.}
+\response{Method added. Thanks.}
 
 \comment{24}{%
-line 335 -> Different seismic zone will not necessarily have difference values of b and Mmax. Change to this: Different seismic zone may have different values of b and Mmax.
+line 335 $\to$ Different seismic zone will not necessarily have difference values of b and Mmax. Change to this: Different seismic zone may have different values of b and Mmax.
 }
 \response{Response will be here.}
 
 \comment{25}{%
-line 337 -> a means to reduce epistemic -> a means to account for epistemic 
+line 337 $\to$ a means to reduce epistemic $\to$ a means to account for epistemic 
 }
 \response{Done.}
 
 \comment{26}{%
-line 361 -> lead -> leads
+line 361 $\to$ lead $\to$ leads
 }
 \response{Two reviewer suggested two different word. Both of them are correct. Please see.}
 
 \comment{27}{%
-line 364 -> How do you address the epistemic uncertainty generally introduced by using a suite of GMPEs?
+line 364 $\to$ How do you address the epistemic uncertainty generally introduced by using a suite of GMPEs?
 }
 \response{As mentioned in Atkinson and Adam (2013) and Atkinson et al (2014), using different GMPEs with different logic tree weights from different literature is not necessarily the best way to model the epistemic uncertainty in GMPEs. We prefer to use the alternative GMPEs and applicable data to guide the choice of a representative or ?central? GMPE, and to define representative (upper and lower) GMPEs that express uncertainty about the central GMPE. In the previeous study (Khodaverdian 2016), they used Akkar and Bommer (2010) and Ghasemi et al (2009) along side other equations. Akkar and Bommer (2010) derived the equation up to 100 Km, which they used for 200 km. Also Ghasemi et al (2009) is presented the coefficients for spectral acceleration not PGA. Of course this alternative method has been a hotly-debated topic, and there is no clear consensus about that, however, the plots of attenuation relationships in different magnitude illustrate the fact that with this approach we can address the epistemic uncertainty in an acceptable range. We totally agree with the reviewer?s comment that presenting the seismic hazard with upper and lower values (Fig 10) to address the epistemic uncertainty could be misleading for the readers. In order to address these concerns, we do the seismic hazard analysis for bigger domain (2 degrees buffer zone) and combine the results according to the logic tree scheme in Fig X.}
 
@@ -309,139 +309,139 @@ line 365: add 'and'
 \response{Added. Thanks.}
 
 \comment{29}{%
-line 370 -> Could you consider other depths to help fill out your range of epistemic uncertainty?
+line 370 $\to$ Could you consider other depths to help fill out your range of epistemic uncertainty?
 }
 \response{The Kalkan and Gulkan (2004) attenuation relationship is originally generated for Turkey. However, in the recent test by Zafarani and Mousavi (2014), it gives acceptable results for PGA. Since the high accuracy achieved by the current depth, and we have no idea how different depth will change the results, we prefer to not to use a parameter without knowing the effects. }
 
 \comment{30}{%
-line 371 -> How does this value compare with the models you decided not to use?
+line 371 $\to$ How does this value compare with the models you decided not to use?
 }
 \response{Response will be here.}
 
 \comment{31}{%
-line 376 -> In this case, you should consider all sources with 200 km of your area of interest.
+line 376 $\to$ In this case, you should consider all sources with 200 km of your area of interest.
 }
 \response{We modified the buffer zone. Thanks.}
 
 \comment{32}{%
-line 394:  50-years -> 50-year
+line 394:  50-years $\to$ 50-year
 }
 \response{Done.}
 
 \comment{33}{%
-line 420 -> with concentration -> with a concentration
+line 420: with concentration $\to$ with a concentration
 }
 \response{Added. Thanks.}
 
 \comment{34}{%
-line 422 -> I would have stated this differently. It looks like the lower b-value in Kopeh Dagh yields relatively high hazard in the R model whereas in the U model, this low b-value has leaked into the entire region and subsequently elevated seismic hazard in all areas outside of Kopeh Dagh.
+line 422 $\to$ I would have stated this differently. It looks like the lower b-value in Kopeh Dagh yields relatively high hazard in the R model whereas in the U model, this low b-value has leaked into the entire region and subsequently elevated seismic hazard in all areas outside of Kopeh Dagh.
 }
 \response{Response will be here.}
 
 \comment{35}{%
-line 428 -> Why equal weights?
+line 428 $\to$ Why equal weights?
 }
 \response{Response will be here.}
 
 \comment{36}{%
-line 431 -> I'm not sure I quite understand this. The standard deviation in the attenuation relation is considered aleatory uncertainty and is present within the hazard curve. Adding it as epistemic as well will cause double counting. If you want to include figure 10, a proper logic tree analysis to include more forms of epistemic uncertainty should be performed. For example, add branches for uncertainty in which GMPE you choose, uncertainty in b-value, uncertainty in Mmax, uncertainty in a-value, uncertainty in smoothing parameter, etc.
+line 431 $\to$ I'm not sure I quite understand this. The standard deviation in the attenuation relation is considered aleatory uncertainty and is present within the hazard curve. Adding it as epistemic as well will cause double counting. If you want to include figure 10, a proper logic tree analysis to include more forms of epistemic uncertainty should be performed. For example, add branches for uncertainty in which GMPE you choose, uncertainty in b-value, uncertainty in Mmax, uncertainty in a-value, uncertainty in smoothing parameter, etc.
 }
-\response{Response will be here.}
+\response{We modified the approach and considered the mentioned uncertainties.}
 
 \comment{37}{%
-line 434 -> Just because the basic pattern appears to better follow faults in the region does not mean it's a better assessment, especially if the b-values are truly different between regions and better represented by the regional analysis.
+line 434 $\to$ Just because the basic pattern appears to better follow faults in the region does not mean it's a better assessment, especially if the b-values are truly different between regions and better represented by the regional analysis.
 }
 \response{Response will be here.}
 
 \comment{38}{%
-line 439: of city of Tabriz -> of the city of Tabriz.
+line 439: of city of Tabriz $\to$ of the city of Tabriz.
 }
-\response{Response will be here.}
+\response{Fixed. Thanks.}
 
 \comment{39}{%
-line 450 ->  for 2 and 10\%, respectively -> for 2 and 10\% in 50 years, respectively.
+line 450 $\to$  for 2 and 10\%, respectively $\to$ for 2 and 10\% in 50 years, respectively.
 }
-\response{Response will be here.}
+\response{Done.}
 
 \comment{40}{%
-line 453 ->  for a 10\% probability of exceedance ?  for a 10\% probability of exceedance in 50 years.
+line 453 $\to$  for a 10\% probability of exceedance ?  for a 10\% probability of exceedance in 50 years.
 }
-\response{Response will be here.}
+\response{Done.}
 
 \comment{41}{%
-line 455 -> 0.27-0.31 g for 10\% probability of exceedance ->  0.27-0.31 g for the same exceedance probability
+line 455 $\to$ 0.27-0.31 g for 10\% probability of exceedance $\to$  0.27-0.31 g for the same exceedance probability
 }
-\response{Response will be here.}
+\response{Done.}
 
 \comment{42}{%
-line 458 ->  for 2 and 10\% ? for 2 and 10\% in 50 years
+line 458 $\to$  for 2 and 10\% ? for 2 and 10\% in 50 years
 }
-\response{Response will be here.}
+\response{Done.}
 
 \comment{43}{%
-line 461 -> our results are close or within ? our results are close to or within 
+line 461: our results are close or within $\to$ our results are close to or within 
 }
-\response{Response will be here.}
+\response{Done.}
 
 
 \comment{44}{%
-line 462 -> Can you explain the differences in their analysis relative to yours that lead to higher values?
+line 462 $\to$ Can you explain the differences in their analysis relative to yours that lead to higher values?
 }
 \response{Response will be here.}
 
 \comment{45}{%
-line 466 -> exceedance as functions of PGA ? exceedance as functions of PGA, also known as hazard curves}
-\response{Response will be here.}
+line 466 $\to$ exceedance as functions of PGA ? exceedance as functions of PGA, also known as hazard curves}
+\response{Added. Thanks.}
 
 \comment{46}{%
-line 475 -> Can you explain the differences in the hazard analysis that led to differences in hazard?}
+line 475 $\to$ Can you explain the differences in the hazard analysis that led to differences in hazard?}
 \response{Response will be here.}
 
 \comment{47}{%
-line 462 -> Can you explain the differences in their analysis relative to yours that lead to higher values?
+line 462 $\to$ Can you explain the differences in their analysis relative to yours that lead to higher values?
 }
 \response{Response will be here.}
 
 \comment{48}{%
-lline 488 -> Not sure you can say this because you don't include fault specific sources, and you do not consider a more full range of epistemic uncertainty, e.g. you only use one GMPE (though you do consider two b-value and Mmax based models).
+lline 488 $\to$ Not sure you can say this because you don't include fault specific sources, and you do not consider a more full range of epistemic uncertainty, e.g. you only use one GMPE (though you do consider two b-value and Mmax based models).
 }
 \response{Response will be here.}
 
 \comment{49}{%
-line 488 -> hazard analysis ? hazard analyses
+line 488:  hazard analysis $\to$ hazard analyses
 }
-\response{Response will be here.}
+\response{Done.}
 
 \comment{50}{%
-line 490 -> models as a mean ? models as a means}
-\response{Response will be here.}
+line 490: models as a mean $\to$ models as a means}
+\response{Done.}
 
 \comment{51}{%
-line 493 -> Though you suggest the uniform model is unrealistic on line 334.}
+line 493 $\to$ Though you suggest the uniform model is unrealistic on line 334.}
 \response{Response will be here.}
 
 \comment{52}{%
-line 502 -> for providing advise ? for providing advice}
-\response{Response will be here.}
+line 502 $\to$ for providing advise ? for providing advice}
+\response{Done.}
 
 \comment{53}{%
-line 509 ->  Should this be Sunset?}
-\response{Response will be here.}
+line 509 $\to$  Should this be Sunset?}
+\response{Yes. Thanks.}
 
 \comment{54}{%
-p 25 ? table2 -> What did you do for the earthquakes occurring outside of these five zones?}
-\response{Response will be here.}
+p 25 ? table2 $\to$ What did you do for the earthquakes occurring outside of these five zones?}
+\response{There are earthquakes out of the regions, mainly above the Caspian see. Since those area are not in our region of interest, and are fairly far from our region, we ignored them.}
 
 \comment{55}{%
-p 26 ? table3 -> Specify units.}
+p 26 ? table3 $\to$ Specify units.}
 \response{Response will be here.}
 
 \comment{56}{%
-p32 ? figure 3 -> You should also show events in the buffer zone used to compute hazard.}
-\response{Response will be here.}
+p32 ? figure 3 $\to$ You should also show events in the buffer zone used to compute hazard.}
+\response{Done.}
 
 \comment{57}{%
-p34 ? figure 5 -> Which seismic zone corresponds to which color? It looks like either reporting or rates have changed over time. For example, I might argue that the red region was not complete for M3 and above until 2005. }
+p34 ? figure 5 $\to$ Which seismic zone corresponds to which color? It looks like either reporting or rates have changed over time. For example, I might argue that the red region was not complete for M3 and above until 2005. }
 \response{Response will be here.}
 
 \comment{58}{%
