--- a/results.tex
+++ b/results.tex
@@ -46,9 +46,9 @@ As it can be seen in Fig.~\ref{fig:pga.ru.std}, the combined (R,U) model follows
     \label{fig:hazardcurve}
 \end{figure*}
 
-We also note that the overall distribution of mean PGA values shown in the middle panels in Fig.~\ref{fig:pga.ru.std} are the ones that best agree with the recent study by \citet{Khodaverdian_2016_BSSA}. These estimates also agree, on average, with other previous studies. For the north-west seismic regions of Azerbaijan and Zagros, for instance, \citet{Tavakoli1999} predicts maximum mean PGA (10\% in 50 years) values of 0.45 g near the North Tabriz Fault and the North Tehran Fault zones, where we find equivalent values to be between 0.35 and 0.50 g in the (R,U)10 model. Similarly, for the particular case of the city of Tabriz, \citet{Vafaie2011} obtained slightly higher expected accelerations on the order of 0.30--0.90 and 0.20--0.65 g for 2 and 10\%, respectively, where our mean values are about 0.53 and 0.36 g for the same corresponding probabilities. In the north-central region of Alborz, \citet{Ghodrati2003} and \citet{Boostan2015} predict PGA values of the order 0.27--0.46 g and 0.42--0.48 g for Tehran, where we found equivalent results to be about 0.25--0.35 g for a 10\% probability of exceedance. The latter estimate is in good agreement with \citet{Abdi2013}, who predicts PGA values in the vicinity of Karaj and Tehran to be on the order of 0.27--0.31 g for 10\% probability of exceedance. Results from \citet{Ghodrati2008} for the Gilan province around the city of Rasht are also on the same order of those shown in Fig.~\ref{fig:pga.ru.std}. Finally, for the city of Bojnurd in the northeast province of Khorasan in the Kopeh Dagh seismic region, \citet{Rahgozar2012} reports expected PGA values in the ranges of 0.28--0.49 and 0.15--0.22 g for 2 and 10\%, where we obtain mean values of 0.51 and 0.34 g, respectively.
+We also note that the overall distribution of mean PGA values shown in the middle panels in Fig.~\ref{fig:pga.ru.std} are the ones that best agree with the recent study by \citet{Khodaverdian_2016_BSSA}. These estimates also agree, on average, with other previous studies. For the north-west seismic regions of Azerbaijan and Zagros, for instance, \citet{Tavakoli1999} predicts maximum mean PGA (10\% in 50 years) values of 0.45 g near the North Tabriz Fault and the North Tehran Fault zones, where we find equivalent values to be between 0.35 and 0.50 g in the (R,U)10 model. Similarly, for the particular case of the city of Tabriz, \citet{Vafaie2011} obtained slightly higher expected accelerations on the order of 0.30--0.90 and 0.20--0.65 g for 2 and 10\% \myrevision{in 50 years}, respectively, where our mean values are about 0.53 and 0.36 g for the same corresponding probabilities. In the north-central region of Alborz, \citet{Ghodrati2003} and \citet{Boostan2015} predict PGA values of the order 0.27--0.46 g and 0.42--0.48 g for Tehran, where we found equivalent results to be about 0.25--0.35 g for a 10\% probability of exceedance \myrevision{in 50 years}. The latter estimate is in good agreement with \citet{Abdi2013}, who predicts PGA values in the vicinity of Karaj and Tehran to be on the order of 0.27--0.31 g for \myrevision{the same exceedance probability}. Results from \citet{Ghodrati2008} for the Gilan province around the city of Rasht are also on the same order of those shown in Fig.~\ref{fig:pga.ru.std}. Finally, for the city of Bojnurd in the northeast province of Khorasan in the Kopeh Dagh seismic region, \citet{Rahgozar2012} reports expected PGA values in the ranges of 0.28--0.49 and 0.15--0.22 g for 2 and 10\% \myrevision{in 50 years}, where we obtain mean values of 0.51 and 0.34 g, respectively.
 
-Table \ref{tab:pga} shows a condensed version of these comparisons between our results and those of other previous studies for selected cities in northern Iran. As mentioned before, overall, our results are close or within the ranges from most studies. The only noticeable exceptions are the results of \citet{Golara2014}, whose expected PGA values are significantly higher than the rest, especially in the cities of Tabriz, Karaj, Tehran and Mashhad, where their results are closer to those of our upper (+STD) range of values. 
+Table \ref{tab:pga} shows a condensed version of these comparisons between our results and those of other previous studies for selected cities in northern Iran. As mentioned before, overall, our results are close \myrevision{to} or within the ranges from most studies. The only noticeable exceptions are the results of \citet{Golara2014}, whose expected PGA values are significantly higher than the rest, especially in the cities of Tabriz, Karaj, Tehran and Mashhad, where their results are closer to those of our upper (+STD) range of values. 
 
 % ***
 
@@ -56,7 +56,7 @@ Table \ref{tab:pga} shows a condensed version of these comparisons between our r
 
 % ***
 
-Following the comparisons shown in Table \ref{tab:pga}, we looked into the more complete picture of the annual probabilities of exceedance as functions of PGA. The results are shown in Fig.~\ref{fig:hazardcurve} for six of the main cities in northern Iran considering the two basic R and U models and the combined (R,U) model. In each case we also show the range $\pm 1$ standard deviation (shaded areas). These hazard curves exemplify again the differences between the R and U models, which are more prominent in the northwest cities of Tabriz and Ardabil, where the U models yield higher expected values of PGA for any given annual probability of exceedance. Minor differences are also present in the results of the central cities of Karaj and Tehran, whereas for the cities of Urmia and Mashhad in the Zagros and Kopeh Dagh seismic zones, the R and U models yield similar if not equivalent hazard estimates. This is consistent with our previous observations regarding Figs.~\ref{fig:pga}, \ref{fig:pga.diff} and \ref{fig:pga.ru.std}.
+Following the comparisons shown in Table \ref{tab:pga}, we looked into the more complete picture of the annual probabilities of exceedance as functions of PGA\myrevision{, also known as hazard curve}. The results are shown in Fig.~\ref{fig:hazardcurve} for six of the main cities in northern Iran considering the two basic R and U models and the combined (R,U) model. In each case we also show the range $\pm 1$ standard deviation (shaded areas). These hazard curves exemplify again the differences between the R and U models, which are more prominent in the northwest cities of Tabriz and Ardabil, where the U models yield higher expected values of PGA for any given annual probability of exceedance. Minor differences are also present in the results of the central cities of Karaj and Tehran, whereas for the cities of Urmia and Mashhad in the Zagros and Kopeh Dagh seismic zones, the R and U models yield similar if not equivalent hazard estimates. This is consistent with our previous observations regarding Figs.~\ref{fig:pga}, \ref{fig:pga.diff} and \ref{fig:pga.ru.std}.
 
 \begin{figure}[t]
     \centering
