--- a/conclusions.tex
+++ b/conclusions.tex
@@ -1,5 +1,5 @@
 
 \section{Concluding Remarks}
 
-We present results from a seismic hazard analysis for northern Iran based on a smoothed seismicity approach, including regional maps of expected peak ground accelerations for different seismic zonation models. In particular, we calculated the hazard for the region of interest using two basic models, a five-seismic zone regions model and a uniform seismic zone model. Our calculations yield results similar to those of other studies but offer a more complete picture than previous hazard analysis due to the usage of a more complete catalog and inclusion of low-magnitude events. In our analysis we found it convenient to combine both the regional and uniform models as a mean to consider the epistemic uncertainty intrinsic to the subjective choice of models and seismic zones. Such a combination yielded hazard maps that adjusted better to the visual interpretation of the historical and instrumental seismicity observed in the region of interest, and to the location of known seismically active faults. While no one model can be deemed more appropriate than others, we believe our results constitute a positive contribution to the understanding of seismic hazard in the region, especially for rural areas that are not the subject of specialized hazard studies such as those conducted for major urban centers. Future work to improve the results presented here should consider alternative attenuation relationships, especially for estimating other ground motion parameters such as response spectral accelerations for different periods and site effects.
+We present results from a seismic hazard analysis for northern Iran based on a smoothed seismicity approach, including regional maps of expected peak ground accelerations for different seismic zonation models. In particular, we calculated the hazard for the region of interest using two basic models, a five-seismic zone regions model and a uniform seismic zone model. Our calculations yield results similar to those of other studies but offer a more complete picture than previous hazard \myrevision{analyses} due to the usage of a more complete catalog and inclusion of low-magnitude events. In our analysis we found it convenient to combine both the regional and uniform models as a \myrevision{means} to consider the epistemic uncertainty intrinsic to the subjective choice of models and seismic zones. Such a combination yielded hazard maps that adjusted better to the visual interpretation of the historical and instrumental seismicity observed in the region of interest, and to the location of known seismically active faults. While no one model can be deemed more appropriate than others, we believe our results constitute a positive contribution to the understanding of seismic hazard in the region, especially for rural areas that are not the subject of specialized hazard studies such as those conducted for major urban centers. Future work to improve the results presented here should consider alternative attenuation relationships, especially for estimating other ground motion parameters such as response spectral accelerations for different periods and site effects.
 
