--- a/hazard.tex
+++ b/hazard.tex
@@ -12,7 +12,7 @@ Once a seismic catalog has been defined, the second most important step is preci
 \noindent
 where $N$ is the number of earthquakes with magnitude greater than or equal to $M$, $a$ accounts for the number of earthquakes that occur within a given region, and $b$ is a measure of the occurrence of earthquakes relative to magnitude \citep{Gutenberg1944}. These parameters can be assumed constant within a region or spatially variable depending on the approach used. 
 
-In this study we use the smoothed seismicity method introduced by \citet{Frankel1995}. This method has been used successfully in different regions around the world including Alaska, California, Hawaii, Italy, \myrevision{and} Turkey \citep[e.g.,][]{Cao1996, Klein2001, Akinci2004, Kalkan2009, Moschetti2014}. In it, the $b$-value is commonly assumed constant within a given seismic zone of ``homogeneous'' seismogenic characteristics, whereas $a$ is varied spatially according to the cataloged occurrence of earthquakes within and around the region. The spatial variation of $a$ is defined based on dividing the region of interest into regular-size grid cells. The parameter $a$ is determined based on the number of events $n_i$ within each cell $i$ of magnitude greater than a reference value $M_{\mathrm{ref}}$, and discretized in different magnitude ranges (or bins). The number of earthquakes within each cell is then smoothed spatially taking into account the values of neighboring cells using a Gaussian function. In essence, the smoothed seismicity approach addresses the aleatoric uncertainty of future earthquake locations by using a weighted contribution of the background regional seismicity, and thus eliminates the need for knowledge about specific fault locations.
+In this study we use the smoothed seismicity method introduced by \citet{Frankel1995}. This method has been used successfully in different regions around the world including Alaska, California, Hawaii, Italy, \myrevision{and} Turkey \myrevision{\citep[e.g.,][]{Cao1996, Klein2001, Akinci2004, Kalkan2009, Moschetti2014,Kagan1994}}. In it, the $b$-value is commonly assumed constant within a given seismic zone of ``homogeneous'' seismogenic characteristics, whereas $a$ is varied spatially according to the cataloged occurrence of earthquakes within and around the region. The spatial variation of $a$ is defined based on dividing the region of interest into regular-size grid cells. The parameter $a$ is determined based on the number of events $n_i$ within each cell $i$ of magnitude greater than a reference value $M_{\mathrm{ref}}$, and discretized in different magnitude ranges (or bins). The number of earthquakes within each cell is then smoothed spatially taking into account the values of neighboring cells using a Gaussian function. In essence, the smoothed seismicity approach addresses the aleatoric uncertainty of future earthquake locations by using a weighted contribution of the background regional seismicity, and thus eliminates the need for knowledge about specific fault locations.
 
 In this study we discretize the region of interest into a regular grid with cells of size 0.1\textdegree{} $\times$ 0.1\textdegree{} (in longitude and latitude). The parameter $a$ for each cell is obtained based on the information in the seismic catalog described in the previous section. Following \citet{Frankel1995}, $n_i$ is smoothed using the normalized Gaussian function
 % 
@@ -24,9 +24,9 @@ In this study we discretize the region of interest into a regular grid with cell
 	\label{eq:nnorm}
 \end{equation}
 % 
-where $\tilde{n}_i$ is the smoothed, normalized number of events in cell $i$, $\Delta_{ij}$ is the distance between the $i$-th and $j$-th cells, and $c$ is the correlation distance. The summations in Eq.~\ref{eq:nnorm} are calculated over the number of $j$ cells within a distance $3c$ from the $i$-th cell. It should be noted that in this process we convert the cumulative number of events to incremental values following \citet{Herrmann1977}. We also note that according to \citet{Frankel1995}, moderate earthquakes generally occur in areas where there have been significant numbers of events with magnitudes $M \geq 3$, thus our interest in having augmented the earthquake catalog for events above this threshold.
+where $\tilde{n}_i$ is the smoothed, normalized number of events in cell $i$, $\Delta_{ij}$ is the distance between the $i$-th and $j$-th cells, and $c$ is the correlation distance. \myrevision{An alternative smoothing kernel has been used in recent studies \citep[e.g.][]{Moscheti2015}}.The summations in Eq.~\ref{eq:nnorm} are calculated over the number of $j$ cells within a distance $3c$ from the $i$-th cell. It should be noted that in this process we convert the cumulative number of events to incremental values following \citet{Herrmann1977}. We also note that according to \citet{Frankel1995}, moderate earthquakes generally occur in areas where there have been significant numbers of events with magnitudes $M \geq 3$, thus our interest in having augmented the earthquake catalog for events above this threshold.
 
-It is obvious from Eq.~\ref{eq:nnorm} that an important parameter in smoothing the seismicity is the correlation distance. Different values of $c$ have been used in past studies, ranging between 10 and 50 km. \citet{Frankel1995} and \citet{Boyd2008} assumed a correlation distance of 50~km, \citet{Foteva2006} used 10 and 15 km, \citet{Barani2007} used 25~km, and \citet{Khodaverdian_2016_BSSA} used 40 km. According to \citet{Mirzaei1997}, determining an appropriate value of $c$ depends on the crustal structure of the region, the distribution of stations, and the number and quality of records. We use an intermediate value of $c=30$~km. This selection is consistent with epicentral uncertainty for previous hazard zoning maps for Iran \citep[see][]{Zare2012}.
+It is obvious from Eq.~\ref{eq:nnorm} that an important parameter in smoothing the seismicity is the correlation distance. Different values of $c$ have been used in past studies, ranging between 10 and 50 km. \citet{Frankel1995},\myrevision{\citet{Boyd2007},  \citet{Boyd2008}, and \citet{Petersen2015}}  assumed a correlation distance of 50~km, \citet{Foteva2006} used 10 and 15 km, \citet{Barani2007} used 25~km, and \citet{Khodaverdian_2016_BSSA} used 40 km. According to \citet{Mirzaei1997}, determining an appropriate value of $c$ depends on the crustal structure of the region, the distribution of stations, and the number and quality of records. \myrevision{Also some studies employ likelihood testing of smoothed seismicity rate models to identify optimal smoothing length for adaptive and fixed smoothed seismicity methods \citep[e.g.][]{Werner2011,Moscheti2015}}. We use an intermediate value of $c=30$~km. This selection is consistent with epicentral uncertainty for previous hazard zoning maps for Iran \citep[see][]{Zare2012}.
 
 In turn, we consider the $b$-values to be constant within each seismic zone as delimited in Fig.~\ref{fig:iran}. Details about the calculation of the $b$-value for each zone are provided \myrevision{in the next section}. By contrast, in the recent work by \citet{Khodaverdian_2016_BSSA}, the authors computed spatially-variable $b$-values within large grid-cells of size 1\textdegree{} $\times$ 1\textdegree{} based on the average seismicity within a 200-km radius from each cell. While gridding $b$-values and considering the influence of neighboring large-size cells allows \myrevision{one} to draw information from the background seismicity, it is unavoidable to have the contributing areas cross over seismic zones of different characteristics, which may bias the computation of $b$-values. Admittedly, these are subjective decisions and any reasonable choice can be considered valid or within the margins of the associated epistemic uncertainty.
 
