figure-11.ai is updated.

--- a/references.bib
+++ b/references.bib
@@ -1122,18 +1122,17 @@
 }
 
 @Article{Kagan1994,
-  author        = {Y. Y. Kagan and D. D. Jackson},
-  title         = {Long-term probabilistic forecasting of earthquakes},
-  year          = {1994},
-  volume        = {99},
-  number        = {B7},
-  month         = {jul},
-  pages         = {13685--13700},
-  doi           = {10.1029/94jb00500},
-  url           = {http://dx.doi.org/10.1029/94JB00500},
-  __markedentry = {[naeem:]},
-  journal       = {J. Geophys. Res.},
-  publisher     = {Wiley-Blackwell},
+  author    = {Y. Y. Kagan and D. D. Jackson},
+  title     = {Long-term probabilistic forecasting of earthquakes},
+  year      = {1994},
+  volume    = {99},
+  number    = {B7},
+  month     = {jul},
+  pages     = {13685--13700},
+  doi       = {10.1029/94jb00500},
+  url       = {http://dx.doi.org/10.1029/94JB00500},
+  journal   = {J. Geophys. Res.},
+  publisher = {Wiley-Blackwell},
 }
 
 @Article{Moschetti2015,
@@ -1146,9 +1145,24 @@
   pages         = {2928--2941},
   doi           = {10.1785/0120140370},
   url           = {http://dx.doi.org/10.1785/0120140370},
-  __markedentry = {[naeem:6]},
+  __markedentry = {[naeem:]},
   journal       = {Bulletin of the Seismological Society of America},
   publisher     = {Seismological Society of America ({SSA})},
+}
+
+@Article{Petersen2015,
+  author        = {Mark D. Petersen and Morgan P. Moschetti and Peter M. Powers and Charles S. Mueller and Kathleen M. Haller and Arthur D. Frankel and Yuehua Zeng and Sanaz Rezaeian and Stephen C. Harmsen and Oliver S. Boyd and Ned Field and Rui Chen and Kenneth S. Rukstales and Nico Luco and Russell L. Wheeler and Robert A. Williams and Anna H. Olsen},
+  title         = {The 2014 {United States} National Seismic Hazard Model},
+  year          = {2015},
+  volume        = {31},
+  number        = {S1},
+  month         = {nov},
+  pages         = {S1--S30},
+  doi           = {10.1193/120814eqs210m},
+  url           = {http://dx.doi.org/10.1193/120814EQS210M},
+  __markedentry = {[naeem:6]},
+  journal       = {Earthquake Spectra},
+  publisher     = {Earthquake Engineering Research Institute},
 }
 
 @Comment{jabref-meta: databaseType:biblatex;}
