--- a/response.tex
+++ b/response.tex
@@ -429,19 +429,19 @@ line 509 $\to$  Should this be Sunset?}
 \response{Yes. Thanks.}
 
 \comment{54}{%
-p 25 ? table2 $\to$ What did you do for the earthquakes occurring outside of these five zones?}
+p 25, table2 $\to$ What did you do for the earthquakes occurring outside of these five zones?}
 \response{There are earthquakes out of the regions, mainly above the Caspian see. Since those area are not in our region of interest, and are fairly far from our region, we ignored them.}
 
 \comment{55}{%
-p 26 ? table3 $\to$ Specify units.}
+p 26, table3 $\to$ Specify units.}
 \response{Response will be here.}
 
 \comment{56}{%
-p32 ? figure 3 $\to$ You should also show events in the buffer zone used to compute hazard.}
+p32, figure 3 $\to$ You should also show events in the buffer zone used to compute hazard.}
 \response{Done.}
 
 \comment{57}{%
-p34 ? figure 5 $\to$ Which seismic zone corresponds to which color? It looks like either reporting or rates have changed over time. For example, I might argue that the red region was not complete for M3 and above until 2005. }
+p34, figure 5 $\to$ Which seismic zone corresponds to which color? It looks like either reporting or rates have changed over time. For example, I might argue that the red region was not complete for M3 and above until 2005. }
 \response{Response will be here.}
 
 \comment{58}{%
@@ -468,7 +468,8 @@ Summary of modifications (Remove before submitting)\\
 - Figure 4: Updated.\\
 - Figure 5: The excel file is updated. The figure needs to be updated.\\
 - Figure 6: Updated data completeness plots added to the figure. Figure needs final polishing. \\
-- Figure 7: Updated. 
+- Figure 7: Updated.\\
+- Figure 11: Updated.\\ 
 }
 
 \end{document}
